--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "TG Rename Bot",
+  "name": "HD Rename Bot",
   "description": "Telegram's best Open Source Rename Bot. Create your Fork now.",
   "keywords": [
     "telegram",
